# telegrama-rs

./: Cargo.toml  README.md
src/: client.rs  configuration.rs  error.rs  formatter.rs  lib.rs
tests/: unit_tests.rs
