[package]
name = "telegrama-rs"
version = "0.1.0"
edition = "2021"
description = "A small, reliable Rust library for sending Telegram messages via bots"
authors = ["Vladislav Dyachenko"]
license = "MIT"
documentation = "https://docs.rs/telegrama-rs"
repository = "https://github.com/wowinter13/telegrama-rs"
homepage = "https://github.com/wowinter13/telegrama-rs"
readme = "README.md"
keywords = ["telegram", "bot", "notification", "messaging", "bot"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.8"
once_cell = "1.18"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
chrono = "0.4"
env_logger = "0.10"

[badges]
maintenance = { status = "actively-developed" }
